--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VirtualChef</title>
+    <title>foodo</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -29,8 +29,8 @@
     </style>
   </head>
   <body>
-    <h1>Welcome to VirtualChef</h1>
+    <h1>Welcome to foodo</h1>
     <p>Your personal AI-powered cooking assistant. Explore recipes, join virtual cooking classes, and connect with a community of food lovers.</p>
-    <footer>&copy; 2024 VirtualChef. All rights reserved.</footer>
+    <footer>&copy; 2024 foodo All rights reserved.</footer>
   </body>
 </html>
