Update and improve homepage content

--- a/index.html
+++ b/index.html
@@ -4,33 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Discover foodo - your AI-powered cooking assistant. Explore recipes, join virtual cooking classes, and connect with food enthusiasts."
+    />
+    <meta name="keywords" content="cooking, AI cooking assistant, recipes, virtual cooking classes, food lovers community" />
     <title>foodo</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 50px;
-        background-color: #f4f4f4;
-        color: #333;
-      }
-      h1 {
-        color: #d35400;
-      }
-      p {
-        font-size: 18px;
-        line-height: 1.6;
-      }
-      footer {
-        margin-top: 50px;
-        font-size: 14px;
-        color: #777;
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Welcome to foodo</h1>
-    <p>Your personal AI-powered cooking assistant. Explore recipes, join virtual cooking classes, and connect with a community of food lovers.</p>
-    <footer>&copy; 2024 foodo All rights reserved.</footer>
+    <main>
+      <h1>Welcome to <span class="foodo">foodo</span></h1>
+      <p>
+        Your personal AI-powered cooking assistant. Explore delicious recipes, join virtual cooking classes, and connect with food lovers from all
+        around the world.
+      </p>
+
+      <div class="cta-buttons">
+        <a href="https://ctis.bilkent.edu.tr/" target="_blank" rel="noopener noreferrer">Senior Project Page</a>
+        <a href="https://github.com/foodohub" target="_blank" rel="noopener noreferrer">GitHub Organization</a>
+      </div>
+    </main>
+
+    <footer>&copy; 2024 foodo. All rights reserved.</footer>
   </body>
 </html>
