Update homepage content

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <main>
       <h1>Welcome to <span class="foodo">foodo</span></h1>
       <p>
-        Your personal AI-powered cooking assistant. Explore delicious recipes, join virtual cooking classes, and connect with food lovers from all
-        around the world.
+        Your AI-powered cooking assistant, guiding you step-by-step to create delicious meals while connecting you with a community of food lovers.
       </p>
 
       <div class="cta-buttons">
