Update footer color and add class for foodo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       </div>
     </main>
 
-    <footer>&copy; 2024 foodo. All rights reserved.</footer>
+    <footer>
+      &copy; 2024
+      <span class="footo">foodo</span>. All rights reserved.
+    </footer>
   </body>
 </html>
