Update Senior Project url

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </p>
 
       <div class="cta-buttons">
-        <a href="https://ctis.bilkent.edu.tr/" target="_blank" rel="noopener noreferrer">Senior Project Page</a>
+        <a href="https://ctis.bilkent.edu.tr/ctis_seniorProject.php?semester=31&id=5043" target="_blank" rel="noopener noreferrer">Senior Project Page</a>
         <a href="https://github.com/foodohub" target="_blank" rel="noopener noreferrer">GitHub Organization</a>
       </div>
     </main>
