Add foodo.svg as favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="./assets/foodo.svg" />
     <meta
       name="description"
       content="Discover foodo - your AI-powered cooking assistant. Explore recipes, join virtual cooking classes, and connect with food enthusiasts."
@@ -21,7 +22,9 @@
       </p>
 
       <div class="cta-buttons">
-        <a href="https://ctis.bilkent.edu.tr/ctis_seniorProject.php?semester=31&id=5043" target="_blank" rel="noopener noreferrer">Senior Project Page</a>
+        <a href="https://ctis.bilkent.edu.tr/ctis_seniorProject.php?semester=31&id=5043" target="_blank" rel="noopener noreferrer"
+          >Senior Project Page</a
+        >
         <a href="https://github.com/foodohub" target="_blank" rel="noopener noreferrer">GitHub Organization</a>
       </div>
     </main>
