--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   </head>
   <body>
     <main>
+      <label class="switch">
+        <input type="checkbox" id="darkModeToggle" />
+        <span class="slider"></span>
+      </label>
       <h1>Welcome to <span class="foodo">foodo</span></h1>
       <p>
         Your AI-powered cooking assistant, guiding you step-by-step to create delicious meals while connecting you with a community of food lovers.
@@ -33,5 +37,10 @@
       &copy; 2024
       <span class="footo">foodo</span>. All rights reserved.
     </footer>
+    <script>
+      document.getElementById('darkModeToggle').addEventListener('change', function () {
+        document.body.classList.toggle('dark-mode', this.checked)
+      })
+    </script>
   </body>
 </html>
