--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="dark-mode">
     <main>
       <label class="switch">
-        <input type="checkbox" id="darkModeToggle" />
+        <input type="checkbox" id="darkModeToggle" checked />
         <span class="slider"></span>
       </label>
       <h1>Welcome to <span class="foodo">foodo</span></h1>
@@ -39,7 +39,7 @@
     </footer>
     <script>
       document.getElementById('darkModeToggle').addEventListener('change', function () {
-        document.body.classList.toggle('dark-mode', this.checked)
+        document.body.classList.toggle('light-mode', !this.checked)
       })
     </script>
   </body>
