--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
           <a href="https://ctis.bilkent.edu.tr/ctis_seniorProject.php?semester=31&id=5043" target="_blank" rel="noopener noreferrer">Senior Project Page</a>
           <a href="https://github.com/foodohub" target="_blank" rel="noopener noreferrer">GitHub Organization</a>
         </div>
+        
+        <a href="mailto:hello@foodo.cfd" class="contact-email">hello@foodo.cfd</a>
       </div>
     </main>
 
