Update Canva embed for improved styling and responsiveness

--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
           Your AI-powered cooking assistant, guiding you step-by-step to create delicious meals while connecting you with a community of food lovers.
         </p>
 
-        <div class="canva-embed">
-          <iframe 
-            loading="lazy" 
-            src="https://www.canva.com/design/DAGfwL8UX80/02WJhJ-0MQgJTaBOlBRrjw/view?embed" 
-            title="foodo presentation"
-            allowfullscreen="allowfullscreen" 
-            allow="fullscreen">
+        <div style="position: relative; width: 100%; max-width: 800px; margin: 0 auto; height: 0; padding-top: 56.25%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+          <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+            src="https://www.canva.com/design/DAGmUCxl3ZA/Xw9LMDyjz-UVuTkZNSj_yg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
           </iframe>
         </div>
 
