--- a/index.html
+++ b/index.html
@@ -45,16 +45,10 @@
       </div>
 
       <div class="cta-buttons">
-        <a href="https://www.instagram.com/getfoodo/" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/Instagram-Logo.png" alt="Instagram logo" class="cta-icon">@getfoodo
-        </a>
+        <a href="https://www.instagram.com/getfoodo/" target="_blank" rel="noopener noreferrer">@getfoodo</a>
         <a href="https://ctis.bilkent.edu.tr/ctis_seniorProject.php?semester=31&id=5043" target="_blank"
-          rel="noopener noreferrer">
-          Senior Project Page
-        </a>
-        <a href="https://github.com/foodohub" target="_blank" rel="noopener noreferrer">
-          <img src="./assets/github-logo-png_seeklogo-273183.png" alt="GitHub logo" class="cta-icon">GitHub Organization
-        </a>
+          rel="noopener noreferrer">Senior Project Page</a>
+        <a href="https://github.com/foodohub" target="_blank" rel="noopener noreferrer">GitHub Organization</a>
       </div>
 
       <a href="mailto:hello@foodo.cfd" class="contact-email">hello@foodo.cfd</a>
